--- a/style.css
+++ b/style.css
@@ -45,16 +45,20 @@ svg {
     display: flex;
     flex-direction: column;
     position: absolute;
+
     bottom: 0%;
     background: rgb(255, 255, 255);
-    opacity: 0;
+    /* opacity: 0; */
+
     padding: 1rem;
     width: 80%;
     border-top-right-radius: 1rem;
-    pointer-events: none;
+
+    /* pointer-events: none; */
     border-top-left-radius: 1rem;
     /* We are adding an adjustemnt class */
-    transform: translateY(100px);
+
+    /* transform: translateY(100px); */
     transition: all 0.5s ease-in-out;
 }
 
@@ -126,7 +130,17 @@ svg {
     font-size: 2rem;
     border: none;
     background: none;
-    
+
     cursor: pointer;
     margin: 2rem 0rem;
+}
+
+ /* change slider appearance */
+input[type="range"] {
+  -webkit-appearance: none;
+  margin: 1rem 0rem;
+  width: 100%;
+  position: relative;
+  border-radius: 1rem;
+  cursor: pointer;
 }
