--- a/style.css
+++ b/style.css
@@ -48,17 +48,17 @@ svg {
 
     bottom: 0%;
     background: rgb(255, 255, 255);
-    /* opacity: 0; */
+    opacity: 0;
 
     padding: 1rem;
     width: 80%;
     border-top-right-radius: 1rem;
 
-    /* pointer-events: none; */
+    pointer-events: none;
     border-top-left-radius: 1rem;
     /* We are adding an adjustemnt class */
 
-    /* transform: translateY(100px); */
+    transform: translateY(100px);
     transition: all 0.5s ease-in-out;
 }
 
@@ -84,7 +84,7 @@ svg {
     color: white;
 
     cursor: pointer;
-    /* font-weight: bold; */
+    font-weight: bold;
 }
 
 .controls {
@@ -152,12 +152,15 @@ input[type="range"] {
     position: fixed;
     top: 0%;
     left: 0%;
+
     background: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
+
     display: flex;
     justify-content: center;
     transition: all 0.5s ease-in-out;
+
     align-items: center;
     opacity: 0;
     pointer-events: none;
